[package]
name = "totoon"
version = "0.1.1"
edition = "2021"
description = "Convert any data format to TOON (Token-Oriented Object Notation)"
license = "MIT"
authors = ["totoon"]
repository = "https://github.com/bug4fix/totoon"
keywords = ["toon", "json", "llm", "data-format", "converter"]
categories = ["encoding", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
serde_test = "1.0"

